demo/virtual-service-all-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
  namespace: app
spec:
  hosts:
#  - productpage.default.svc.cluster.local
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: '/productpage'
    - uri:
        prefix: '/static'
    - uri:
        exact: '/login'
    - uri:
        exact: '/logout'
    - uri:
        prefix: '/api'
    route:
    - destination:
        host: productpage.default.svc.cluster.local
        port:
          number: 9080

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: app
spec:
  hosts:
  - reviews.default.svc.cluster.local
#  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        prefix: "/reviews"
    route:
    - destination:
        host: reviews.default.svc.cluster.local
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
  namespace: app
spec:
  hosts:
  - ratings.default.svc.cluster.local
#  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - headers:
        end-user:
          exact: ""
    - uri:
        prefix: "/ratings"
    route:
    - destination:
        host: ratings.default.svc.cluster.local
        port:
          number: 9080
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: details
  namespace: app
spec:
  hosts:
  - details.default.svc.cluster.local
#  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        prefix: "/details"
    route:
    - destination:
        host: details.default.svc.cluster.local
        port:
          number: 9080
---
